; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-serialize.c_tl_unserialize.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-serialize.c_tl_unserialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_compiler = type { i32 }
%struct.tl_buffer = type { i32 }
%struct.tl_scheme_object = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_unserialize(%struct.tl_compiler* %0, %struct.tl_buffer* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.tl_compiler*, align 8
  %7 = alloca %struct.tl_buffer*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.tl_scheme_object*, align 8
  %12 = alloca i32, align 4
  store %struct.tl_compiler* %0, %struct.tl_compiler** %6, align 8
  store %struct.tl_buffer* %1, %struct.tl_buffer** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  store %struct.tl_scheme_object* null, %struct.tl_scheme_object** %11, align 8
  %13 = load %struct.tl_compiler*, %struct.tl_compiler** %6, align 8
  %14 = call i32 @tl_compiler_clear_errors(%struct.tl_compiler* %13)
  %15 = load %struct.tl_compiler*, %struct.tl_compiler** %6, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @tl_expression_unserialize(%struct.tl_compiler* %15, i32* %16, i32 %17, i32 %18, i32* null, %struct.tl_scheme_object** %11)
  store i32 %19, i32* %12, align 4
  %20 = load i32, i32* %12, align 4
  %21 = icmp sge i32 %20, 0
  br i1 %21, label %22, label %31

22:                                               ; preds = %5
  %23 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %11, align 8
  %24 = icmp ne %struct.tl_scheme_object* %23, null
  br i1 %24, label %25, label %31

25:                                               ; preds = %22
  %26 = load %struct.tl_buffer*, %struct.tl_buffer** %7, align 8
  %27 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %11, align 8
  %28 = call i32 @tl_scheme_object_sbdump(%struct.tl_buffer* %26, %struct.tl_scheme_object* %27)
  %29 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %11, align 8
  %30 = call i32 @tl_scheme_object_free(%struct.tl_scheme_object* %29)
  br label %31

31:                                               ; preds = %25, %22, %5
  %32 = load i32, i32* %12, align 4
  ret i32 %32
}

declare dso_local i32 @tl_compiler_clear_errors(%struct.tl_compiler*) #1

declare dso_local i32 @tl_expression_unserialize(%struct.tl_compiler*, i32*, i32, i32, i32*, %struct.tl_scheme_object**) #1

declare dso_local i32 @tl_scheme_object_sbdump(%struct.tl_buffer*, %struct.tl_scheme_object*) #1

declare dso_local i32 @tl_scheme_object_free(%struct.tl_scheme_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
